style: fix wrapping bug with diff-sized columns
if the third column in a row was not the tallest one, the next column
would display underneath the column after the tallest column, rather
than wrapping back to the beggining of the next row as expected

--- a/wedsite/static/css/style.css
+++ b/wedsite/static/css/style.css
@@ -183,3 +183,11 @@ html {
 .hotel-td {
     padding: 5px 0px 0px 20px;
 }
+
+/* override display properties of bootstrap columns to allow sane wrapping */
+.col-sm-4 {
+    display: inline-block;
+    vertical-align: top;
+    float: none;
+    width: 32%;
+}
